[package]
name = "fm_synth"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2.0"
winapi = "0.2.7"
user32-sys = "0.2.0"



[dependencies.rust-embed]
version = "5.5.1"
features = ["debug-embed"]

[lib]
name = "fm_synth"
crate-type = ["cdylib"]
